--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
+    "bootstrap": "^5.3.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.3",
+    "i18next": "^23.2.11",
     "postcss-loader": "^7.3.3",
     "prettier": "^2.7.1",
     "sass": "^1.63.6",
@@ -36,10 +39,10 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "yup": "^1.2.0"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "i18next": "^23.2.11",
     "yup": "^1.2.0"
