--- a/package.json
+++ b/package.json
@@ -44,7 +44,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
+    "https-browserify": "^1.0.0",
     "i18next": "^23.2.11",
+    "rss-parser": "^3.13.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.1",
+    "xml2js": "^0.6.0",
     "yup": "^1.2.0"
   }
 }
