--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "My webpack project",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production --node-env=production",
@@ -43,15 +43,18 @@
     "yup": "^1.2.0"
   },
   "dependencies": {
+    "assert": "^2.1.0",
     "bootstrap": "^5.3.0",
     "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
     "i18next": "^23.2.11",
+    "path-browserify": "^1.0.1",
     "rss-parser": "^3.13.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "timers-browserify": "^2.0.12",
     "url": "^0.11.1",
+    "util": "^0.12.5",
     "xml2js": "^0.6.0",
     "yup": "^1.2.0"
   }
