--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
     "i18next": "^23.2.11",
+    "on-change": "^5.0.0",
     "path-browserify": "^1.0.1",
     "rss-parser": "^3.13.0",
     "stream-browserify": "^3.0.0",
