--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.3",
     "i18next": "^23.2.11",
+    "lodash": "^4.17.21",
     "postcss-loader": "^7.3.3",
     "prettier": "^2.7.1",
     "sass": "^1.63.6",
@@ -48,6 +49,7 @@
     "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
     "i18next": "^23.2.11",
+    "lodash": "^4.17.21",
     "on-change": "^5.0.0",
     "path-browserify": "^1.0.1",
     "rss-parser": "^3.13.0",
